[metadata]
name = up-bank-api
author = Joshua Cowie-Willox
author_email = joshwillox@gmail.com
url = https://github.com/jcwillox/up-bank-api
project_urls =
    Documentation = https://jcwillox.github.io/up-bank-api

license = MIT
license_file = LICENSE
platforms = any

long_description = file: README.md
long_description_content_type = text/markdown
