[options]
python_requires = >=3.7
packages = find:

[options.packages.find]
exclude = tests, tests.*

[metadata]
name = up-bank-api
author = Joshua Cowie-Willox
author_email = joshwillox@gmail.com
url = https://github.com/jcwillox/up-bank-api
project_urls =
    Documentation = https://jcwillox.github.io/up-bank-api

license = MIT
license_file = LICENSE
platforms = any

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
